Revert "FriendsPage.module.css: remove overflow:hidden from .list and add overflow:visible to .section > * to fix mobile friend search display"
This reverts commit ebdde40168b69a331a14116a7403fd71f59e8159.

--- a/src/pages/FriendsPage/FriendsPage.module.css
+++ b/src/pages/FriendsPage/FriendsPage.module.css
@@ -55,13 +55,13 @@
 .section > * {
   max-width: 100%;
   box-sizing: border-box;
-  overflow: visible;
 }
 
 .list {
   list-style: none;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 .listItem {
